--- a/cogl-pango/Makefile.am
+++ b/cogl-pango/Makefile.am
@@ -28,7 +28,7 @@ lib_LTLIBRARIES = libcogl-pango2.la
 
 libcogl_pango2_la_SOURCES = $(source_c) $(source_h) $(source_h_priv)
 libcogl_pango2_la_CFLAGS = $(COGL_DEP_CFLAGS) $(COGL_PANGO_DEP_CFLAGS) $(COGL_EXTRA_CFLAGS) $(MAINTAINER_CFLAGS)
-libcogl_pango2_la_LIBADD = $(top_builddir)/clib/src/libclib.la
+libcogl_pango2_la_LIBADD = $(top_builddir)/clib/clib/libclib.la
 libcogl_pango2_la_LIBADD += $(top_builddir)/cogl/libcg.la
 libcogl_pango2_la_LIBADD += $(COGL_DEP_LIBS) $(COGL_PANGO_DEP_LIBS) $(COGL_EXTRA_LDFLAGS)
 libcogl_pango2_la_LDFLAGS = -static
@@ -37,8 +37,8 @@ AM_CPPFLAGS = \
 	-DCG_COMPILATION \
 	-DG_LOG_DOMAIN=\"CoglPango\" \
 	-I$(top_srcdir)/libuv/include \
-	-I$(top_srcdir)/clib/src \
-	-I$(top_builddir)/clib/src \
+	-I$(top_srcdir)/clib/clib \
+	-I$(top_builddir)/clib/clib \
 	-I$(top_srcdir)/cogl \
 	-I$(top_builddir)/cogl \
 	-I$(top_srcdir)/cogl/winsys \
